--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NUMBER_OF_PICKS=5
 MIN_MATCHES=2
-MIN_LOTTERY_PICK=1
-MAX_LOTTERY_PICK=90
-PLAYER_NUMBERS_FILE_PATH="10m-v2.txt"
+MIN_PICK=1
+MAX_PICK=90
+PLAYER_PICKS_FILE_PATH="10m-v2.txt"
